--- a/Judy/IDE/ide.qrc
+++ b/Judy/IDE/ide.qrc
@@ -3,5 +3,6 @@
     <file>images/new.png</file>
     <file>images/open.png</file>
     <file>images/save.png</file>
+    <file>images/icon.png</file>
 </qresource>
 </RCC>
