--- a/IDE/style.css
+++ b/IDE/style.css
@@ -30,17 +30,40 @@ QToolBar
 	border: none;
 }
 
-QTabBar::tab 
+QTabWidget#bottomTabs
 {
-	background: #333333;
+	border: none;
+}
+
+QTabBar::tab
+{
+	background: #2D2D2D;
 }
 
 QTabBar::tab:selected
 {
-	background: #007ACC;
+	color: #0E99DD;
+	background: #1B1B1B;
 }
 
 QTabBar::tab:hover
+{
+	color: #0E99DD;
+	background: #3E3E3E;
+}
+
+QTabBar#documentsTabs::tab 
+{
+	color: white;
+	background: #333333;
+}
+
+QTabBar#documentsTabs::tab:selected
+{
+	background: #007ACC;
+}
+
+QTabBar#documentsTabs::tab:hover
 {
 	background: #1C97EA;	
 }
@@ -48,4 +71,9 @@ QTabBar::tab:hover
 QHeaderView::section 
 {
 	background-color: #2D2D2D;
+}
+
+QWidget#AAA
+{
+	background: #333333;
 }
